# ddo-build-planner

./: .test  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md
app/: Cargo.toml
app/src/: main.rs
builder/: Cargo.toml
builder-core/: Cargo.toml
builder-core/examples/: serialize.rs
builder-core/src/: lib.rs
builder-core/src/attribute/: macros.rs  mod.rs  traits.rs
builder-core/src/attribute/flags/: mod.rs
builder-core/src/attribute/impls/: mod.rs  player_class.rs
builder-core/src/attribute/selectors/: mod.rs  spell_selector.rs
builder-core/src/attribute/sub/: ability.rs  armor_class.rs  caster_level.rs  class_lore.rs  damage_reduction.rs  defensive.rs  difficulty_check.rs  elemental_defenses.rs  filigree_set_bonus.rs  flag.rs  heal_amp.rs  health.rs  hit_points.rs  immunity.rs  mod.rs  offensive.rs  proficiency.rs  saving_throw.rs  set_bonus.rs  skill.rs  spell_points.rs  spell_power.rs  spell_school.rs  spell_selector.rs  spell_type.rs  tactics.rs  threat.rs  toggle.rs  weapon.rs
builder-core/src/attribute/toggles/: attacking_target.rs  mod.rs
builder-core/src/attribute/types/: ability.rs  alignment.rs  armor_class.rs  damage_reduction.rs  energy_resistance.rs  immunity.rs  mod.rs  monster_type.rs  player_class.rs  race.rs  saving_throw.rs  sheltering.rs  skill.rs  spell_power.rs  spell_school.rs  weapon_attribute.rs  weapon_hand.rs  weapon_hand_stat.rs  weapon_stat.rs
builder-core/src/bonus/: bonus_source.rs  bonus_type.rs  bonus_types.rs  condition.rs  mod.rs  source.rs  traits.rs  value.rs
builder-core/src/breakdown/: attribute_queue.rs  mod.rs
builder-core/src/compiler/: attribute_queue.rs  bonus_set.rs  clone_bonuses.rs  default_bonuses.rs  mod.rs  partial_bonus.rs
builder-core/src/feat/: feat_trait.rs  mod.rs  traits.rs
builder-core/src/feat/category/: mod.rs  proficiency.rs  skill_focus.rs  tomes.rs
builder-core/src/item/: mod.rs
builder-core/src/item/types/: armor.rs  mod.rs  shield.rs  weapon.rs  weapon_category.rs
builder-core/src/player_class/: class_bonuses.rs  mod.rs
builder-core/src/race/: bonuses.rs  display.rs  mod.rs
builder-core/src/utils/: as_string.rs  binary_enum_hash.rs  binary_enum_map.rs  mod.rs  simple_enum.rs
builder-core/tests/: attribute_compiler_test.rs  compiler_bonuses_test.rs
builder-data/: Cargo.toml
builder/src/: attribute.rs  bonus.rs  breakdowns.rs  debug.rs  equipment.rs  feat.rs  lib.rs  types.rs
builder/src/attribute/: constructors.rs  from.rs  macros.rs  mod.rs  to_attribute.rs  traits.rs
builder/src/attribute/bonuses/: ability.rs  armor_class.rs  damage_reduction.rs  energy_resistance.rs  immunity.rs  mod.rs  player_class.rs  saving_throw.rs  sheltering.rs  skill.rs  spell_power.rs  weapon_attribute.rs
builder/src/attribute/flags/: main_hand.rs  mod.rs  off_hand.rs
builder/src/attribute/impls/: base_attack_bonus.rs  epic_levels.rs  mod.rs  player_class.rs
builder/src/attribute/selectors/: mod.rs  spell_selector.rs
builder/src/attribute/toggles/: attacking_target.rs  mod.rs
builder/src/attribute/traits/: attribute_dependencies.rs  default_bonuses.rs  get_bonuses.rs  mod.rs  track_attribute.rs
builder/src/attribute/types/: mod.rs  (+16 more)
builder/src/bonus/: base.rs  bonus_type.rs  condition.rs  deserialize.rs  mod.rs  source.rs  template.rs  traits.rs  value.rs
builder/src/breakdowns/: base.rs  breakdown.rs  buffer.rs  calculation.rs  dynamic.rs  edit.rs  evaluation.rs  inserting.rs  mod.rs
builder/src/compiler/: attribute_queue.rs  buffer.rs  calculation.rs  default_bonuses.rs  inserting.rs  mod.rs
builder/src/dice/: dice.rs  formula.rs  mod.rs
builder/src/equipment/: enchantment.rs  gearset.rs  mod.rs  set_bonus.rs  slots.rs
builder/src/feat/: feats.rs  mod.rs  proficiency.rs  requirements.rs  spell_focus.rs  to_feat.rs
builder/src/item/: mod.rs
builder/src/player_class/: bonuses.rs  mod.rs
builder/src/race/: bonuses.rs  display.rs  feats.rs  mod.rs
builder/src/types/: ability.rs  absorption.rs  alignment.rs  armor_class.rs  crafting_slot.rs  damage_type.rs  defenses.rs  dodge.rs  epic_sphere.rs  flag.rs  gear_slot.rs  guild.rs  guild_level.rs  heal_amp.rs  health.rs  immunity.rs  item_type.rs  mod.rs  monster_type.rs  player_class.rs  player_race.rs  race.rs  saving_throw.rs  sheltering.rs  skill.rs  slider.rs  sneak_attack.rs  spell_points.rs  spell_power.rs  spell_school.rs  spell_selector.rs  spellcasting.rs  summoned_attribute.rs  tactics.rs  toggle.rs  toggle_group.rs  weapon_attribute.rs  weapon_stat.rs
builder/src/utils/: as_string.rs  mod.rs  ord.rs  simple_enum.rs
builder/tests/: attribute.rs  bonus.rs  bonus_value.rs  breakdowns.rs  compiler.rs  compiler_bonuses_test.rs  feats.rs  logic.rs  race.rs
data/: Cargo.toml  README.md  build.rs
data/data/: item_sets.ron  set_bonuses.ron
data/data/set_bonuses/: might_of_the_abashai.ron
data/examples/: resource.rs
data/src/: example.rs  item_sets.rs  lib.rs  main.rs  set_bonuses.rs  util.rs
data/tests/: set_bonuses.rs  utils.rs
editor/: Cargo.toml  build.rs
editor/src/: app.rs  crash.rs  data.rs  data_load.rs  data_utils.rs  git.rs  lib.rs  main.rs  message.rs  modals.rs  state.rs  tabs.rs  widgets.rs
editor/src/components/: crash.rs
editor/src/data/: container.rs  utils.rs
editor/src/io/: mod.rs  set_bonuses.rs
editor/src/libs/: git.rs
editor/src/messages/: data.rs  mod.rs
editor/src/modals/: attribute.rs  bonus_template.rs  expression.rs
editor/src/tabs/: home.rs  item_sets.rs  mod.rs  sandbox.rs  set_bonuses.rs
editor/src/utils/: data.rs  mod.rs
editor/src/widgets/: attribute_selector.rs  bonus_selector.rs  mod.rs  modals.rs  selector.rs  selectors.rs
ui/: Cargo.toml
ui/src/: font.rs  lib.rs  log.rs  traits.rs
utils/: Cargo.toml
utils/src/: all.rs  bit_ops.rs  enums.rs  float.rs  from_into.rs  hashmap.rs  iters.rs  lib.rs  macros.rs  maps.rs  modules.rs  ord.rs  ron.rs  vecs.rs
utils/src/iced/: mod.rs  traits.rs
utils/src/maps/: get_or.rs  get_or_default.rs  into_grouped_hash.rs  map_type.rs
utils/src/ord/: groupedmap.rs  mod.rs  set.rs
(+195 files in other folders)
