[workspace]
members = ["builder", "app", "data", "editor", "utils"]
default-members = ["app"]
resolver = "2"

[workspace.package]
authors = ["LittleTealeaf"]
description = "A Cross-Platform Dungeons & Dragons Online Build Planner written in Rust."
categories = ["ddo", "builder", "rust"]
keywords = ["ddo", "dungeons & dragons online", "builder", "planner"]
repository = "https://www.github.com/LittleTealeaf/ddo-build-planner"
readme = "./README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.0.1"

[workspace.lints.rust]
dead_code = "allow"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
complexity = "warn"
nursery = "warn"
must_use_candidate = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
