[workspace]
members = ["builder", "app", "data", "editor", "utils", "ui"]
default-members = ["app"]
resolver = "2"

[workspace.package]
authors = ["LittleTealeaf"]
description = "A Cross-Platform Dungeons & Dragons Online Build Planner written in Rust."
categories = ["ddo", "builder", "rust"]
keywords = ["ddo", "builder", "planner"]
repository = "https://www.github.com/LittleTealeaf/ddo-build-planner"
readme = "./README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.0.1"

[workspace.lints.rust]
dead_code = "allow"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = {level = "warn", priority = -1}
complexity = {level = "warn", priority = -1}
nursery = {level = "warn", priority = -1}

assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
default_instead_of_iter_empty = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
missing_assert_message = "warn"
mod_module_files = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unwrap_in_result = "warn"
wildcard_dependencies = "warn"
redundant_feature_names = "warn"
renamed_function_params = "warn"

too_many_lines = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
needless_collect = { level = "allow", priority = 1 }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
