[package]
name = "app"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
license-file.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
builder = { path = "../builder/" }
data = { path = "../data/" }
iced = "0.10.0"
roc = "0.0.0"
ron = "0.8.1"
rust_decimal = "1.33.1"


[[bin]]
name = "ddo-build-planner"
path = "src/main.rs"
