[package]
name = "builder-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_test = "1.0.163"

[dev-dependencies]
ron = "0.8.0"
