[package]
name = "builder-core"
authors = ["Thomas Kwashnak"]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = {version = "2.5.0", features = ["serde"]}
itertools = "0.10.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_test = "1.0.163"

[dev-dependencies]
ron = "0.8.0"
