[package]
name = "builder-data"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builder = { path = "../builder/"}
serde = { version = "1.0.164", features = ["derive"] }
ron = "0.8.0"
