[package]
name = "builder"
license-file.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
debug = ["utils/debug"]

[dependencies]
utils = { path = "../utils/" }
itertools = "0.11.0"
serde = { version = "1.0.191", features = ["derive"] }
ron = "0.8.1"
log = "0.4.20"
im = "15.1.0"

[dev-dependencies]
builder = { path = ".", features = ["debug"] }
serde_test = "1.0.176"
