[package]
name = "builder"
license-file.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
debug = ["utils/debug"]

[dependencies]
utils = { path = "../utils/" }
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
ron = "0.8.1"
log = "0.4.20"
im = "15.1.0"
rust_decimal = "1.33.1"

[dev-dependencies]
builder = { path = ".", features = ["debug"] }
serde_test = "1.0.176"
