[package]
name = "builder"
license-file.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
debug = ["utils/debug"]

[dependencies]
utils = { path = "../utils/" }
itertools = "0.13.0"
serde = { version = "1.0.216", features = ["derive"] }
ron = "0.8.1"
log = "0.4.25"
im = { version = "15.1.0", features = ["serde"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"

[dev-dependencies]
builder = { path = ".", features = ["debug"] }
serde_test = "1.0.177"
