[package]
name = "data"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
example = []

[dependencies]
builder = { path = "../builder/"}
serde = { version = "1.0.192", features = ["derive"] }
ron = "0.8.1"

[build-dependencies]
serde = { version = "1.0.192" }
ron = "0.8.1"
builder = { path = "../builder/" }

[dev-dependencies]
data = { path = ".", features = ["example"] }
