[package]
name = "data"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
license-file.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
example = []

[dependencies]
builder = { path = "../builder/" }
serde = { version = "1.0.216", features = ["derive"] }
utils = { path = "../utils/" }
ron = "0.8.1"
anyhow = "1.0.93"

[build-dependencies]
serde = { version = "1.0.216" }
ron = "0.8.1"
builder = { path = "../builder/" }
itertools = "0.13.0"
utils = { path = "../utils/" }
anyhow = "1.0.93"

[dev-dependencies]
data = { path = ".", features = ["example"] }
itertools = "0.13.0"
utils = { path = "../utils/" }
