
[package]
name = "editor"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
builder = { path = "../builder/" }
utils = { path = "../utils/" }
ui = { path = "../ui/" }
roc = "0.0.0"
serde = { version = "1.0.202" }
iced = { version = "0.12.1", features = ["tokio"] }
tokio = { version = "1.37.0", features = ["fs", "io-util", "macros", "rt"] }
ron = { version = "0.8.1" }
iced_aw = { version = "0.9.3", default-features = false, features = [
	"tabs",
	"tab_bar",
	"floating_element",
	"icons",
	"modal",
	"card",
	"drop_down" # todo: remove drop down?
] }
fuzzy-filter = "0.1.0"
itertools = "0.12.1"
rust_decimal = "1.35.0"

[dev-dependencies]
tempfile = { version = "3.10.1" }
builder = { path = "../builder/", features = ["debug"] }
