
[package]
name = "editor"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
builder = { path = "../builder/" }
utils = { path = "../utils/" }
ui = { path = "../ui/" }
serde = { version = "1.0.210" }
iced = { version = "0.12.1", features = ["tokio"] }
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "rt"] }
ron = { version = "0.8.1" }
iced_aw = { version = "0.9.3", default-features = false, features = [
	"tabs",
	"tab_bar",
	"floating_element",
	"icons",
	"modal",
	"card",
	"drop_down",        # todo: remove drop down?
] }
fuzzy-filter = "0.1.0"
itertools = "0.13.0"
rust_decimal = "1.36.0"
anyhow = "1.0.92"
im = { version = "15.1.0", features = ["serde"] }

[dev-dependencies]
tempfile = { version = "3.13.0" }
builder = { path = "../builder/", features = ["debug"] }
