[package]
name = "ui"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true

[lints]
workspace = true


[dependencies]
iced = { version = "0.10.0", features = ["tokio"] }
utils = { path = "../utils/" }
builder = { path = "../builder/" }
