[package]
name = "utils"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
debug = []
iced = ["dep:iced"]

[dependencies]
im = "15.1.0"
itertools = "0.12.0"
iced = { version = "0.10.0", features = ["tokio"], optional = true }
