[package]
name = "utils"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
debug = []

[dependencies]
im = "15.1.0"
itertools = "0.14.0"
ron = "0.11.0"
